# lpy_treesim

./: .dockerignore  .gitignore  Dockerfile  README.rst  __init__.py  activate_env.bat  base_lpy.lpy  color_manager.py  helper.py  pyproject.toml  simulation_base.py  stochastic_tree.py
.github/workflows/: docs.yml
docker/: entrypoint.sh
docs/: Makefile  make.bat
docs/source/: conf.py  files.rst  index.rst  installation.rst  methods.rst  resources.rst  usage.rst
examples/: Camp_Envy_tie_prune_label.lpy  Envy_tie_prune_label.lpy  UFO_tie_prune_label.lpy
examples/Envy/: Envy.lpy  Envy_prototypes.py  Envy_simulation.py
examples/UFO/: UFO.lpy  UFO_prototypes.py  UFO_simulation.py  UFOconfigs.py
examples/legacy/: UFO_tie_prune_label.lpy
lpy_treesim/: __init__.py  base_lpy.lpy  color_manager.py  helper.py  simulation_base.py  stochastic_tree.py
lpy_treesim/examples/Envy/: Envy_prototypes.py  Envy_simulation.py
lpy_treesim/examples/UFO/: UFO.lpy  UFO_prototypes.py  UFO_simulation.py
lpy_treesim/examples/envy/: envy.lpy  envy_prototypes.py  envy_simulation.py
lpy_treesim/examples/ufo/: ufo.lpy  ufo_prototypes.py  ufo_simulation.py
lpy_treesim/media/vid/: ufo_grow.mov
lpy_treesim/modules_test/: BasicWood_test.lpy  BasicWood_tying_test.lpy  prune_basic.lpy  simple_tree_test.lpy  support_test.lpy
lpy_treesim/other_files/: BasicWood_test.lpy  apple_model.lpy  apple_tie.lpy  hermit_cspline.lpy  leaf_model.lpy  multi_tie.lpy  random_tie.lpy  tie_once.lpy
lpy_treesim/other_files/legacy/: Camp_Envy_tie_prune_label.lpy  Envy_tie_prune_label.lpy  UFO_tie_prune_label.lpy  static_envy.lpy  static_ufo.lpy
lpy_treesim/tree_generation/: convert_ply_to_ext.py  convert_ply_to_usd.py  create_ply_from_json.py  generate_orchard.py  helpers.py  l_systems_builder.py  lpy_mesh_utils.py  make_n_trees.py  mesh_to_cylinders.py  tree_builder.py  tree_name_conf.py  verify_colors.py  visualize_hierarchy.py
lpy_treesim/utils/: logging_conf.py
other_files/legacy/: static_envy.lpy
tests/: conftest.py  test_rng.py
tests/tmp/: lpy_ufo_00000.ply  lpy_ufo_00001.ply
tree_generation/: convert_ply_to_ext.py  create_ply_from_json.py  helpers.py  make_n_trees.py  mesh_to_cylinders.py  verify_colors.py
